heading font changed

--- a/index.html
+++ b/index.html
@@ -59,25 +59,27 @@
                     <h3 class="mb-5">Data Sceince Projects</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h5 class="mb-0">prediction of women returners across australia</h5>
+                            <h4 class="mb-0">prediction of women returners across australia</h4>
                             <div class="subheading mb-3">July 2021 </div>
                             <p>Analysed the data published on Australian Bureau of Statistics (ABS) website and identified the data required for the project
-Applied various Linear regression models to predict the percentage of women returners 
-Presented the predictions along with contributing factors using Tableau.</p>
+                             Applied various Linear regression models to predict the percentage of women returners 
+                             Presented the predictions along with contributing factors using Tableau.</p>
                         </div>
                         
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Data SCIENCE jobs SALARY prediction</h3>
+                            <h4 class="mb-0">Data SCIENCE jobs SALARY prediction</h4>
                             <div class="subheading mb-3">June 2021 </div>
-                            <p>.</p>
+                            <p>Scraped the job posts from www.seek.com.au using Scrapy. Predicted the salary band and job title based on the job description 
+                                Identified the key factors impacting the salary band and job title prediction
+                                 Applied Natural Language Processing (NLP) and Word2Vec models for predictions</p>
                         </div>
                         
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Property sale price Predictive analysis</h3>
+                            <h4 class="mb-0">Property sale price Predictive analysis</h4>
                             <div class="subheading mb-3">May 2021</div>
                             <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
                         </div>
@@ -85,7 +87,7 @@ Presented the predictions along with contributing factors using Tableau.</p>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Exploratory Data Analysis</h3>
+                            <h4 class="mb-0">Exploratory Data Analysis</h4>
                             <div class="subheading mb-3">April 2021 </div>
                             <p> During this project execution, learn how to analyse the data, through statistics and visualisation.</p>
                         </div>
