--- a/index.html
+++ b/index.html
@@ -116,6 +116,10 @@
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             .NET framework
                         </li>
+                          <li>
+                            <span class="fa-li"><i class="fas fa-check"></i></span>
+                            Microsoft BI
+                        </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
                             Cross Functional Teams
