--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                     <p class="lead mb-5"> I have recently graduated from Data Science Immersive Course. with Junior Data Scientist with a background in Programming and Information Technology. 
                     I am passionate about data and I see endless possibilities of creating value out of it. I am looking for opportunities to apply my knowledge and data science skills to enable data-driven decisions in organisations.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/swatikute/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/SwatiDK"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -81,7 +81,11 @@
                         <div class="flex-grow-1">
                             <h4 class="mb-0">Property sale price Predictive analysis</h4>
                             <div class="subheading mb-3">May 2021</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <p>Understood the data using Exploratory Data Analysis techniques
+Enriched the data using data transformation techniques
+Implemented the linear regression model to predict the house prices
+Identified the factors impacting the sales price positively and negatively 
+Analysed the effect of renovatable features on house price .</p>
                         </div>
                         
                     </div>
@@ -89,7 +93,9 @@
                         <div class="flex-grow-1">
                             <h4 class="mb-0">Exploratory Data Analysis</h4>
                             <div class="subheading mb-3">April 2021 </div>
-                            <p> During this project execution, learn how to analyse the data, through statistics and visualisation.</p>
+                            <p> During this project execution, learn how to analyse the data, 
+                                through statistics and visualisation and recommended some guidelines for 
+                                government agency to improve the policy decisions</p>
                         </div>
                         
                     </div>
