--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </section>
             <hr class="m-0" />
             <!-- Experience-->
-            <section class="resume-section" id="experience">
+            <section class="resume-section" id="projects">
                 <div class="resume-section-content">
                     <h3 class="mb-5">Data Sceince Projects</h3>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
