--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
                 <span class="d-block d-lg-none">Swati Kute</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/SwatiProfilePic1.jpg" alt="..." /></span>
             </a>
+            <div class="subheading mb-5">
+                 Swati Kute
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
