--- a/index.html
+++ b/index.html
@@ -47,8 +47,12 @@
                         Junior Data Scientist
                         <a href="mailto:name@email.com">mrs.swati.kute@gmail.com</a>
                     </div>
-                    <p class="lead mb-5"> I have recently graduated from Data Science Immersive Course. with Junior Data Scientist with a background in Programming and Information Technology. 
-                    I am passionate about data and I see endless possibilities of creating value out of it. I am looking for opportunities to apply my knowledge and data science skills to enable data-driven decisions in organisations.</p>
+                    <p class="lead mb-5"> I am recently graduated from Data Science Immersive Course, General Assembly, Sydney, 
+                        12 weeks of continously learning and project has harnessed my Data Analytics and Machine learning skills. 
+                        
+                       With background in Information Technolgoies and Programming, I am looking for opportunites to creating value and contribute 
+                        towards the organisation mission.  
+                        </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/swatikute/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/SwatiDK"><i class="fab fa-github"></i></a>
