--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                         Junior Data Scientist
                         <a href="mailto:name@email.com">mrs.swati.kute@gmail.com</a>
                     </div>
-                    <p class="lead mb-5"> I am recently graduated from Data Science Immersive Course, General Assembly, Sydney, 
-                        12 weeks of continously learning and project has harnessed my Data Analytics and Machine learning skills. 
+                    <p class="lead mb-5"> I am recent graduate from Data Science Immersive Course, General Assembly, Sydney. 
+                        12 weeks of continous learning and projects has harnessed my Data Analytics and Machine learning skills. 
                         
                        With background in Information Technolgoies and Programming, I am looking for opportunites to creating value and contribute 
                         towards the organisation mission.  
