--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="lead mb-5"> I am recent graduate from Data Science Immersive Course, General Assembly, Sydney. 
                         12 weeks of continous learning and projects has harnessed my Data Analytics and Machine learning skills. 
                         
-                       With background in Information Technolgoies and Programming, I am looking for opportunites to creating value and contribute 
+                       With background in Information Technolgoies and Programming, I am looking for opportunites to contribute 
                         towards the organisation mission.  
                         </p>
                     <div class="social-icons">
