--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <span class="text-primary">Kute</span>
                     </h1>
                     <div class="subheading mb-5">
-                        Junior Data Scientist
+                        Associate Data Scientist
                         <a href="mailto:name@email.com">mrs.swati.kute@gmail.com</a>
                     </div>
                     <p class="lead mb-5"> I am recent graduate from Data Science Immersive Course, General Assembly, Sydney. 
